--- a/Bethco/package.json
+++ b/Bethco/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@mantine/core": "^7.17.1",
+    "@mantine/hooks": "^7.17.1",
     "@tailwindcss/vite": "^4.0.9",
     "bethco": "file:",
     "react": "^19.0.0",
